<resources>
    <string name="app_name">Cofolder</string>
    <string name="server_error">Server error. Please, try again later. </string>
    <string name="enter_name_and_surname">Please, enter your first and second name. </string>
    <string name="please_enter_phone_number">Please, enter phone number.</string>
    <string name="no_user_with_this_phone">User with this phone number is not yet registered. </string>
    <string name="entered_own_phone">You entered your own phone number. </string>
    <string name="cannot_send_request">Unknown error, request was not sent. </string>
    <string name="network_error">Network error. Please check your connection. </string>
    <string name="add_your_first_note">Add your first note</string>
    <string name="add_your_first_list">Add your first list</string>
    <string name="add_your_first_folder">Add your first folder</string>
    <string name="loading_complete">Loading complete. </string>
    <string name="read_contacts_permission_explained">Cofolder needs your permission to read contacts to help you find your friends </string>
    <string name="phone_was_copied">Phone number was copied</string>
    <string name="choose_from_contacts">Or choose from contacts: </string>
    <string name="save_to_gallery">Save to gallery</string>
    <string name="please_wait">Please, wait…</string>
    <string name="confirm">Please, confirm action</string>
    <string name="confirm_delete_start">Are you sure you want to delete the document </string>
    <string name="confirm_delete_end">It will be completely deleted, so no one can access it ever. </string>
    <string name="confirm_leave_start">Are you sure you want to leave the document </string>
    <string name="confirm_leave_end">You\'ll loose access to it, but it will not affect other contributors. </string>
    <string name="image_saved">Image was saved to device gallery</string>
    <string name="change_profile_photo">Change profile picture? </string>
    <string name="added_by">Added by: </string>
    <string name="request_title">Friend request from</string>
    <string name="request_message">Please, check Cofolder app to accept new friend request!</string>
    <string name="confirm_lang_change">Sure you want to change language to</string>
    <string name="explain_issue">Please explain your issue</string>
    <string name="issue_was_sent">Thank you! We received your issue </string>
    <string name="delete_image">Do you want to delete this image?</string>
    <string name="no_requests_to_me">Nobody has sent you friend request yet</string>
    <string name="no_requests_by_me">You haven\'t sent any friend requests yet</string>
    <string name="slide1_title">Write it out!</string>
    <string name="slide1_text">Create awesome notes and stunning lists with Cofolder. Keep all the essential info in one convenient place.</string>
    <string name="slide2_title">Keep what\'s important!</string>
    <string name="slide2_text">Capture the most memorable moments. Create folders and fill them with pictures in high resolution.</string>
    <string name="slide3_title">Edit!</string>
    <string name="slide3_text">Highlight your content with optional colors, edit titles, sort. Your data is available offline as well as online.</string>
    <string name="slide4_title">Share!</string>
    <string name="slide4_text">Add friends and share your content using different access levels.</string>
    <string name="slide5_title">Let\'s get started!</string>
    <string name="slide5_text">Start using Cofolder now and explore even more amazing features.</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_lists">Lists</string>
    <string name="menu_images">Images</string>
    <string name="start">Start</string>
    <string name="name">Name</string>
    <string name="surname">Last name</string>
    <string name="create_account">Create account</string>
    <string name="add_friends">Add friends</string>
    <string name="public_profile">Public profile</string>
    <string name="requests">Requests</string>
    <string name="sent_to_me">Sent to me: </string>
    <string name="sent_by_me">Sent by me: </string>
    <string name="folder_name">Folder title</string>
    <string name="create_folder">New folder</string>
    <string name="create_note">New note</string>
    <string name="create_list">New list</string>
    <string name="signout">Sign out</string>
    <string name="friends">Friends</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="leave">Leave</string>
    <string name="select_images">Select images</string>
    <string name="uploading_images">Uploading images</string>
    <string name="images_uploaded">images uploaded</string>
    <string name="note_name">Note title</string>
    <string name="list_name">List title</string>
    <string name="add_item">Add item</string>
    <string name="note_text">Text of the note</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="settings">Settings</string>
    <string name="view_grid">View grid</string>
    <string name="view_list">View list</string>
    <string name="send_request">Send request</string>
    <string name="accept">Accept request</string>
    <string name="remove_friend">Remove friend</string>
    <string name="remove">Remove</string>
    <string name="phone_no">Phone number</string>
    <string name="cancel_request">Cancel request</string>
    <string name="add_contributor">Add contributor</string>
    <string name="app_info">App info</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="allow_notifications">Allow notifications</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="default_theme">Match system</string>
    <string name="done">Done</string>
    <string name="can_edit">Can edit</string>
    <string name="feedback">Feedback</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms">Terms of use</string>
    <string name="send">Send</string>
    <string name="change">Change</string>
    <string name="by_default">By default</string>
    <string name="by_date">By date</string>
    <string name="by_color">By color</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="show_only_private">Show only private</string>
    <string name="checked_first">Checked first</string>
    <string name="rb_unchecked_first">Unchecked first</string>
    <string name="transition_image" translatable="false">transition_image</string>
    <string name="transition_textview" translatable="false">transition_textview</string>
    <string name="transition_phone" translatable="false">transition_phone</string>
</resources>