<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.dronina.cofolder.ui.publicprofile.PublicProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_nav_bg"
        tools:context=".ui.publicprofile.PublicProfileFragment">

        <Button
            android:id="@+id/btn_send_request"
            style="@style/AppTheme.Button"
            android:textColor="@color/colorOnSurface"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/send_request"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

        <Button
            android:id="@+id/btn_remove_friend"
            style="@style/AppTheme.Button"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/remove_friend"
            android:textColor="@color/colorOnSurface"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

        <Button
            android:id="@+id/btn_accept"
            style="@style/AppTheme.Button"
            android:textColor="@color/colorOnSurface"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/accept"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/tv_user_name"
            app:layout_constraintStart_toStartOf="@+id/tv_user_name"
            app:layout_constraintTop_toBottomOf="@+id/btn_send_request" />

        <Button
            android:id="@+id/btn_cancel_request"
            style="@style/AppTheme.Button"
            android:textColor="@color/colorOnSurface"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/cancel_request"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/tv_user_name"
            app:layout_constraintStart_toStartOf="@+id/tv_user_name"
            app:layout_constraintTop_toBottomOf="@+id/btn_send_request" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/iv_profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_person"
            app:roundedCornerRadius="100dp"
            app:placeholderImage="@color/gray"
            android:transitionName="@string/transition_image"/>

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@={viewModel.userText}"
            android:textAppearance="@style/TextAppearanceBigTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile_pic"
            tools:text="Nastya Dronina"
            android:transitionName="@string/transition_textview"/>

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@={viewModel.user.phone}"
            android:textAppearance="@style/TextAppearanceNormal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
            tools:text="+79042873004"
            android:transitionName="@string/transition_phone"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>