<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.dronina.cofolder.ui.changetheme.ChangeThemeViewModel" />
    </data>

    <RadioGroup
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="?attr/actionBarSize"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:id="@+id/rg_themes"
        android:background="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.changetheme.ChangeThemeFragment">

        <RadioButton
            android:id="@+id/rb_light_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:textColor="?attr/colorOnSurface"
            android:textAppearance="@style/TextAppearanceTextButton"
            android:text="@string/light_theme" />

        <RadioButton
            android:id="@+id/rb_dark_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:textColor="?attr/colorOnSurface"
            android:textAppearance="@style/TextAppearanceTextButton"
            android:text="@string/dark_theme" />

        <RadioButton
            android:id="@+id/rb_default_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:textColor="?attr/colorOnSurface"
            android:textAppearance="@style/TextAppearanceTextButton"
            android:text="@string/default_theme" />

    </RadioGroup>
</layout>