<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:orientation="vertical"
        tools:context=".ui.about.AboutFragment">

        <Button
            android:id="@+id/btn_feedback"
            style="@style/Widget.MaterialComponents.Button.TextButton.BlackText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_feedback"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="0dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/feedback"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearanceTextButton"
            app:cornerRadius="0dp"
            app:iconPadding="8dp" />

        <Button
            android:id="@+id/btn_rate_app"
            style="@style/Widget.MaterialComponents.Button.TextButton.BlackText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_rate"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="0dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/rate_the_app"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearanceTextButton"
            app:cornerRadius="0dp"
            app:iconPadding="8dp" />

        <Button
            android:id="@+id/btn_privacy_policy"
            style="@style/Widget.MaterialComponents.Button.TextButton.BlackText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_privacy_policy"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="0dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/privacy_policy"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearanceTextButton"
            app:cornerRadius="0dp"
            app:iconPadding="8dp" />

        <Button
            android:id="@+id/btn_terms"
            style="@style/Widget.MaterialComponents.Button.TextButton.BlackText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_terms"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="0dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/terms"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearanceTextButton"
            app:cornerRadius="0dp"
            app:iconPadding="8dp" />

    </LinearLayout>
</layout>